bpo-37616: Fix incorrect zip path for 3.10 prep