Modules/getpath.c
@@ -1284,7 +1284,7 @@ calculate_read_pyenv(PyCalculatePath *calculate)
 static PyStatus
 calculate_zip_path(PyCalculatePath *calculate)
 {
-    const wchar_t *lib_python = L"lib/python00.zip";
+    const wchar_t *lib_python = L"lib/python000.zip";
 
     if (calculate->prefix_found > 0) {
         /* Use the reduced prefix returned by Py_GetPrefix()
@@ -1307,10 +1307,16 @@ calculate_zip_path(PyCalculatePath *calculate)
         return _PyStatus_NO_MEMORY();
     }
 
-    /* Replace "00" with version */
-    size_t len = wcslen(calculate->zip_path);
-    calculate->zip_path[len - 6] = VERSION[0];
-    calculate->zip_path[len - 5] = VERSION[2];
+    /* Replace "000" with version */
+    size_t bufsz = wcslen(calculate->zip_path);
+    calculate->zip_path[bufsz - 7] = VERSION[0];
+    calculate->zip_path[bufsz - 6] = VERSION[2];
+    if (sizeof(VERSION) == 5) {
+      calculate->zip_path[bufsz - 5] = VERSION[3];
+    }
+    else {
+      memmove(&calculate->zip_path[bufsz - 5], &calculate->zip_path[bufsz - 4], bufsz);
+    }
 
     return _PyStatus_OK();
 }
